# recommender-system-for-news

./: .gitignore  .gitmodules  .profile  .slugignore  LICENSE  Procfile-gunicorn-and-worker-jobs  Procfile-prefiller  README.md  app.py  init.py  job_scrapping_prefilling_db_update.sh  mail_sender.py  python_tests.bat  requirements.txt  requirements_deploy_ubuntu.txt  requirements_dev_py310.txt  requirements_dev_py38_py39.txt  requirements_production.txt  requirements_win.txt  setup.cfg  tox.ini  try.py  try_content_based_methods.py  try_content_based_recommendation.txt  try_data_manipulation.py  try_email_sending.py  try_fuzzy_methods.py  try_hybrid_fuzzy_methods.py  try_hybrid_methods.txt  try_messaging.py  try_prefillers.py  try_prefillers.txt  try_print_model_variant_relevance.py  try_research.py  try_user_eval.py  try_user_methods.py  try_user_relevance_classifier.py  wget-log
config/: trials_counter.py
data/morphological_database/: majka.l-wt  majka.lt-w
database/db_backups/: categories.csv
deploy/: logrotate.conf  logs.txt  new_deploy.sh  python_categories.service  python_hybrid_prefilling.service  python_keywords.service  python_scraper.service  python_stars.service  python_thumbs.service
misc/: bfg_commands.txt  celery_commands.txt  conda_commands  database_restore_from_backup.txt  git filter from old files  pandas  pytest_with_logging  ubuntu_clean_disk_space  ubuntu_deploy_venv_activation.txt
models/: d2v_mini_vectors.model  lda_model  lda_model.expElogbeta.npy  lda_model.id2word  lda_model.state  lda_model_full_text  lda_model_full_text.expElogbeta.npy  lda_model_full_text.id2word  lda_model_full_text.state  lightgbm.pkl  tfidf_all_features_preprocessed.npz  tfidf_category_title.npz  tfidf_title_y.npz  w2v_model_limited_test
src/: main.py
stats/: filtered_results.csv  readme.txt
tests/: pytest.ini  tests_to_exclude_form_tox_on_github.txt
tests_in_progress/: test_user_prefiller.py
(+249 files in other folders)
