[metadata]
name = moje-clanky-core-api
description = news article recommender system api
author = Patrik Müller
license = Copyright of OSU
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[tool:pytest]
addopts = --ignore-glob=test_local

[options]
packages =
    recommender_core
    prefillers
    presentation

install_requires =
    aniso8601~=9.0.1
    annoy==1.17.1
    click~=8.0.3
    colorama~=0.4.4
    Flask~=2.2.2
    Flask-RESTful~=0.3.9
    gensim~=4.1.2
    gunicorn~=20.1.0
    importlib-metadata>=3.6.0
    itsdangerous~=2.0.1
    Jinja2~=3.0.3
    joblib~=1.1.0
    MarkupSafe>=2.0
    nltk~=3.5
    pandas~=1.4.2
    protobuf~=3.19.1
    psycopg2~=2.9.2
    python-dateutil~=2.8.2
    pytz~=2021.3
    regex~=2021.7.6
    scikit-learn~=0.24.1
    scipy~=1.8.0
    simpful~=2.9.0
    six~=1.16.0
    smart-open~=5.2.1
    threadpoolctl~=3.0.0
    tqdm~=4.61.2
    types-redis==4.3.21.1
    Werkzeug
    requests~=2.27.1
    urllib3~=1.26.4
    dropbox~=11.27.0
    redis~=4.0.2
    sklearn~=0.0
    majka~=0.9
    html2text~=2020.1.16
    pyLDAvis~=3.3.1
    surprise~=0.1
    certifi~=2021.5.30
    pytest~=7.1.2
    seaborn~=0.11.2
    matplotlib~=3.5.1
    pymongo~=4.1.1
    altair~=4.2.0
    optuna~=2.10.0
    xgboost~=1.5.2
    lightgbm~=3.3.2
    pika~=1.2.0
    spacy-sentence-bert~=0.1.2
    zipp>=0.5

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160